feat: better swagger return, add rabbitmq to docker compose
